logic/src/parse/snapshots/logic__parse__ui__missing_endfor.snap
---
source: logic/src/parse/ui.rs
assertion_line: 64
expression: "ui_test(include_str!(\"ui-examples/missing-next\").to_string())"

---
error: Your program contains a syntax error!
  ┌─ file:3:1
  │
3 │ finish
  │ ^^^^ Expected `next` in this position, however, instead there was `fini`


